--- a/src/public/home.html
+++ b/src/public/home.html
@@ -4,48 +4,48 @@
 <head>
     <title>Hello, World!</title>
     <link rel="stylesheet" href="../../css/reset.css">
-    <link rel="stylesheet" href="../../css/font.css">
-    <link rel="stylesheet" href="../../css/header.css">
-    <link rel="stylesheet" href="../../css/home-main.css">
-    <link rel="stylesheet" href="../../css/home-section.css">
-    <link rel="stylesheet" href="../../css/aside.css">
-    <link rel="stylesheet" href="../../css/footer.css">
+    <link rel="stylesheet" href="../../css/public.css">
+    <link rel="stylesheet" href="../../css/home.css">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul id="nav-left">
+    <div class="nav-container">
+        <nav class="nav responsive">
+            <ul class="nav-left">
                 <li class="item current"><a href="../public/home.html">Home</a></li>
                 <li class="item"><a href="../public/browse.html">Browse</a></li>
                 <li class="item"><a href="../public/search.html">Search</a></li>
             </ul>
-            <ul id="nav-right">
+            <ul class="nav-right">
                 <li class="item dropdown">
                     <span>My account</span>
                     <ul class="dropdown-content">
-                        <li class="item"><a href="../private/upload.html"><img src="../../img/svg/upload.svg">Upload</a></li>
-                        <li class="item"><a href="../private/mypicture.html"><img src="../../img/svg/image.svg">My Picture</a></li>
-                        <li class="item"><a href="../private/myfavorites.html"><img src="../../img/svg/like.svg">My Favorites</a></li>
-                        <li class="item"><a href="../other/signin.html"><img src="../../img/svg/user.svg">Sign in</a></li>
+                        <li class="item"><a href="../private/upload.html"><img src="../../img/svg/upload.svg">Upload</a>
+                        </li>
+                        <li class="item"><a href="../private/mypicture.html"><img src="../../img/svg/image.svg">My
+                                Picture</a></li>
+                        <li class="item"><a href="../private/myfavorites.html"><img src="../../img/svg/like.svg">My
+                                Favorites</a></li>
+                        <li class="item"><a href="../other/signin.html"><img src="../../img/svg/user.svg">Sign in</a>
+                        </li>
                     </ul>
                 </li>
             </ul>
         </nav>
-    </header>
+    </div>
     <main>
         <h1>Hello,World!</h1>
         <img src="../../img/travel-images/normal/medium/9504448540.jpg" width="100%">
     </main>
     <section>
         <div class="photo-item">
-            <a href="../other/detail.html">
-                <div class="photo-box">
+            <a href="../other/detail.html" class="ptoto-item-container-vertical">
+                <div class="photo-container">
                     <img class="photo" src="../../img/travel-images/normal/medium/5855191275.jpg">
                 </div>
-                <div class="text-box">
+                <div class="photo-info">
                     <div class="title">Lorem ipsum</div>
-                    <div class="text">
+                    <div class="brief">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
@@ -58,13 +58,13 @@
             </a>
         </div>
         <div class="photo-item">
-            <a href="../other/detail.html">
-                <div class="photo-box">
+            <a href="../other/detail.html" class="ptoto-item-container-vertical">
+                <div class="photo-container">
                     <img class="photo" src="../../img/travel-images/normal/medium/5855221959.jpg">
                 </div>
-                <div class="text-box">
+                <div class="photo-info">
                     <div class="title">Lorem ipsum</div>
-                    <div class="text">
+                    <div class="brief">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
@@ -77,13 +77,13 @@
             </a>
         </div>
         <div class="photo-item">
-            <a href="../other/detail.html">
-                <div class="photo-box">
+            <a href="../other/detail.html" class="ptoto-item-container-vertical">
+                <div class="photo-container">
                     <img class="photo" src="../../img/travel-images/normal/medium/5855774224.jpg">
                 </div>
-                <div class="text-box">
+                <div class="photo-info">
                     <div class="title">Lorem ipsum</div>
-                    <div class="text">
+                    <div class="brief">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
@@ -96,13 +96,13 @@
             </a>
         </div>
         <div class="photo-item">
-            <a href="../other/detail.html">
-                <div class="photo-box">
+            <a href="../other/detail.html" class="ptoto-item-container-vertical">
+                <div class="photo-container">
                     <img class="photo" src="../../img/travel-images/normal/medium/5857298322.jpg">
                 </div>
-                <div class="text-box">
+                <div class="photo-info">
                     <div class="title">Lorem ipsum</div>
-                    <div class="text">
+                    <div class="brief">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
@@ -115,13 +115,13 @@
             </a>
         </div>
         <div class="photo-item">
-            <a href="../other/detail.html">
-                <div class="photo-box">
+            <a href="../other/detail.html" class="ptoto-item-container-vertical">
+                <div class="photo-container">
                     <img class="photo" src="../../img/travel-images/normal/medium/6114867983.jpg">
                 </div>
-                <div class="text-box">
+                <div class="photo-info">
                     <div class="title">Lorem ipsum</div>
-                    <div class="text">
+                    <div class="brief">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
@@ -134,13 +134,13 @@
             </a>
         </div>
         <div class="photo-item">
-            <a href="../other/detail.html">
-                <div class="photo-box">
+            <a href="../other/detail.html" class="ptoto-item-container-vertical">
+                <div class="photo-container">
                     <img class="photo" src="../../img/travel-images/normal/medium/9504451722.jpg">
                 </div>
-                <div class="text-box">
+                <div class="photo-info">
                     <div class="title">Lorem ipsum</div>
-                    <div class="text">
+                    <div class="brief">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
@@ -153,13 +153,13 @@
             </a>
         </div>
         <div class="photo-item">
-            <a href="../other/detail.html">
-                <div class="photo-box">
+            <a href="../other/detail.html" class="ptoto-item-container-vertical">
+                <div class="photo-container">
                     <img class="photo" src="../../img/travel-images/normal/medium/9498386718.jpg">
                 </div>
-                <div class="text-box">
+                <div class="photo-info">
                     <div class="title">Lorem ipsum</div>
-                    <div class="text">
+                    <div class="brief">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
@@ -172,13 +172,13 @@
             </a>
         </div>
         <div class="photo-item">
-            <a href="../other/detail.html">
-                <div class="photo-box">
+            <a href="../other/detail.html" class="ptoto-item-container-vertical">
+                <div class="photo-container">
                     <img class="photo" src="../../img/travel-images/normal/medium/6592317633.jpg">
                 </div>
-                <div class="text-box">
+                <div class="photo-info">
                     <div class="title">Lorem ipsum</div>
-                    <div class="text">
+                    <div class="brief">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
@@ -191,13 +191,13 @@
             </a>
         </div>
         <div class="photo-item">
-            <a href="../other/detail.html">
-                <div class="photo-box">
+            <a href="../other/detail.html" class="ptoto-item-container-vertical">
+                <div class="photo-container">
                     <img class="photo" src="../../img/travel-images/normal/medium/8152043422.jpg">
                 </div>
-                <div class="text-box">
+                <div class="photo-info">
                     <div class="title">Lorem ipsum</div>
-                    <div class="text">
+                    <div class="brief">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
@@ -210,13 +210,13 @@
             </a>
         </div>
         <div class="photo-item">
-            <a href="../other/detail.html">
-                <div class="photo-box">
+            <a href="../other/detail.html" class="ptoto-item-container-vertical">
+                <div class="photo-container">
                     <img class="photo" src="../../img/travel-images/normal/medium/8645912379.jpg">
                 </div>
-                <div class="text-box">
+                <div class="photo-info">
                     <div class="title">Lorem ipsum</div>
-                    <div class="text">
+                    <div class="brief">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
@@ -229,13 +229,13 @@
             </a>
         </div>
         <div class="photo-item">
-            <a href="../other/detail.html">
-                <div class="photo-box">
+            <a href="../other/detail.html" class="ptoto-item-container-vertical">
+                <div class="photo-container">
                     <img class="photo" src="../../img/travel-images/normal/medium/8711645510.jpg">
                 </div>
-                <div class="text-box">
+                <div class="photo-info">
                     <div class="title">Lorem ipsum</div>
-                    <div class="text">
+                    <div class="brief">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
@@ -248,13 +248,13 @@
             </a>
         </div>
         <div class="photo-item">
-            <a href="../other/detail.html">
-                <div class="photo-box">
+            <a href="../other/detail.html" class="ptoto-item-container-vertical">
+                <div class="photo-container">
                     <img class="photo" src="../../img/travel-images/normal/medium/8646991554.jpg">
                 </div>
-                <div class="text-box">
+                <div class="photo-info">
                     <div class="title">Lorem ipsum</div>
-                    <div class="text">
+                    <div class="brief">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
@@ -271,31 +271,31 @@
         <button id="refresh" onclick="alert('Refreshed')"><img src="../../img/svg/refresh.svg"></button>
         <button id="up_to_top"><a href="#nav-left"><img src="../../img/svg/up_to_top.svg"></a></button>
     </aside>
-    <footer>
-        <div class="footer-content">
-            <ul class="col">
-                <li class="item"><a href="#">Terms</a></li>
-                <li class="item"><a href="#">Privacy</a></li>
-                <li class="item"><a href="#">Help</a></li>
-            </ul>
-            <ul class="col">
-                <li class="item"><a href="#">About</a></li>
-                <li class="item"><a href="#">Contact Us</a></li>
-            </ul>
-            <ul class="col">
-                <li class="item"><a href="#"><img src="../../img/svg/alipay.svg" alt=""></a></li>
-                <li class="item"><a href="#"><img src="../../img/svg/social_github.svg" alt=""></a></li>
-                <li class="item"><a href="#"><img src="../../img/svg/social_stackflow.svg" alt=""></a></li>
-                <li class="item"><a href="#"><img src="../../img/svg/social_wechat.svg" alt=""></a></li>
-            </ul>
-            <ul class="col">
-                <li><img src="../../img/Wechat2DCode.JPG" width="150px" height="150px"></li>
-            </ul>
-        </div>
-        <div class="footer-info">
-            &copy; 2020 JLiu. All Rights Reserved.
-        </div>
-    </footer>
+    <div class="footer-container">
+        <footer class="responsive">
+            <div class="footer-multicol responsive">
+                <ul class="footer-item-col">
+                    <li class="item"><a href="#">Terms</a></li>
+                    <li class="item"><a href="#">Privacy</a></li>
+                    <li class="item"><a href="#">Help</a></li>
+                </ul>
+                <ul class="footer-item-col">
+                    <li class="item"><a href="#">About</a></li>
+                    <li class="item"><a href="#">Contact Us</a></li>
+                </ul>
+                <ul class="footer-icon-col">
+                    <li class="item"><a href="#"><img src="../../img/svg/alipay.svg" alt=""></a></li>
+                    <li class="item"><a href="#"><img src="../../img/svg/social_github.svg" alt=""></a></li>
+                    <li class="item"><a href="#"><img src="../../img/svg/social_stackflow.svg" alt=""></a></li>
+                    <li class="item"><a href="#"><img src="../../img/svg/social_wechat.svg" alt=""></a></li>
+                </ul>
+                <ul class="">
+                    <li><img src="../../img/Wechat2DCode.JPG" width="100px" height="100px"></li>
+                </ul>
+            </div>
+            <div class="footer-brief"></div>
+        </footer>
+    </div>
 </body>
 
 </html>
