--- a/src/other/detail.html
+++ b/src/other/detail.html
@@ -5,7 +5,6 @@
     <title>Details</title>
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/public.css">
-    <link rel="stylesheet" href="../../css/details.css">
 </head>
 
 <body>
@@ -41,6 +40,7 @@
                 </div>
                 <div class="photo-info">
                     <div class="title">Lorem ipsum</div>
+                    <div class="author">by Agitak</div>
                     <div class="info">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
                         ut
@@ -56,17 +56,17 @@
                 </div>
             </div>
             <div class="container-l1">
+                <div class="title">Image Details</div>
+                <div class="container-l2">Content: Scenery</div>
+                <div class="container-l2">Country: China</div>
+                <div class="container-l2">City: Shanghai</div>
+            </div>
+            <div class="container-l1">
                 <div class="title">Likes</div>
                 <div class="container-l2">999+</div>
             </div>
-            <div class="container-l1">
-                <div class="title">Image Details</div>
-                <div class="container-l2">Content:Scenery</div>
-                <div class="container-l2">Country:China</div>
-                <div class="container-l2">City:Shanghai</div>
-            </div>
             <div class="container-l2">
-                <button class="button"><img src="../../img/svg/like.svg" alt="" height="32px">Like</button>
+                <button class="button" onclick="alert('Added to favorite')">Like</button>
             </div>
         </div>
     </div>
