--- a/src/public/home.html
+++ b/src/public/home.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/public.css">
     <link rel="stylesheet" href="../../css/home.css">
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
+    <script src="../../jQuery/home-totop.js"></script>
 </head>
 
 <body>
@@ -269,7 +271,7 @@
     </section>
     <aside>
         <button id="refresh" onclick="alert('Refreshed')"><img src="../../img/svg/refresh.svg"></button>
-        <button id="up_to_top"><a href="#nav-left"><img src="../../img/svg/up_to_top.svg"></a></button>
+        <button class="to_top"><img src="../../img/svg/up_to_top.svg"></button>
     </aside>
     <div class="footer-container">
         <footer class="responsive">
@@ -284,10 +286,10 @@
                     <li class="item"><a href="#">Contact Us</a></li>
                 </ul>
                 <ul class="footer-icon-col">
-                    <li class="item"><a href="#"><img src="../../img/svg/alipay.svg" alt=""></a></li>
-                    <li class="item"><a href="#"><img src="../../img/svg/social_github.svg" alt=""></a></li>
-                    <li class="item"><a href="#"><img src="../../img/svg/social_stackflow.svg" alt=""></a></li>
-                    <li class="item"><a href="#"><img src="../../img/svg/social_wechat.svg" alt=""></a></li>
+                    <li class="icon"><a href="#"><img src="../../img/svg/alipay.svg" alt=""></a></li>
+                    <li class="icon"><a href="#"><img src="../../img/svg/social_github.svg" alt=""></a></li>
+                    <li class="icon"><a href="#"><img src="../../img/svg/social_stackflow.svg" alt=""></a></li>
+                    <li class="icon"><a href="#"><img src="../../img/svg/social_wechat.svg" alt=""></a></li>
                 </ul>
                 <ul class="">
                     <li><img src="../../img/Wechat2DCode.JPG" width="100px" height="100px"></li>
