--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
 
 <head>
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
+    <script>
+        $(function(){
+            window.location.replace("src/other/signin.html");
+        });
+    </script>
 </head>
 
 <body>
-    <a href="src/public/home.html">TEST</a>
 </body>
 
 </html>
