--- a/src/private/upload.html
+++ b/src/private/upload.html
@@ -2,10 +2,12 @@
 <html>
 
 <head>
-    <title>Search</title>
+    <title>Upload</title>
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/public.css">
     <link rel="stylesheet" href="../../css/upload.css">
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
+    <script src="../../jQuery/upload-photopreview.js"></script>
 </head>
 
 <body>
@@ -36,18 +38,21 @@
     <div class="container-l0-colflex responsive">
         <div class="upload container-l1">
             <div class="title">Upload</div>
-            <form class="upload form container-l2" action="mypicture.html" method="POST">
-                <input type="file" name="" id="">
-                <button type="button" onclick="alert('Uploaded')">Upload</button>
-                <label for="Title">Title</label>
-                <textarea name="Title" id="" cols="30" rows="10"></textarea>
-                <label for="Description">Description</label>
-                <textarea name="Description" id="" cols="30" rows="10"></textarea>
-                <label for="Country">Country</label>
-                <textarea name="Country" id="" cols="30" rows="10"></textarea>
-                <label for="City">City</label>
-                <textarea name="City" id="" cols="30" rows="10"></textarea>
-                <button type="submit" onclick="alert('Submitted')">Submit</button>
+            <form class="form-container container-l2" action="mypicture.html" method="POST">
+                <div id="photo-container" class="photo-container">
+                    <img id="photo-preview" src="../../img/svg/image.svg" alt="">
+                </div>
+                <input type="file" name="" id="fileupload" accept="image/*" hidden required>
+                <button class="center-button form-button" type="button" onclick="$('#fileupload').click()">Upload</button>
+                <label class="form-lable" for="Title">Title</label>
+                <input class="form-text" type="text" name="Title" id="">
+                <label class="form-lable" for="Description">Description</label>
+                <textarea class="form-textarea" name="Description" id=""></textarea>
+                <label class="form-lable" for="Country">Country</label>
+                <input type="text" name="Country" id="" class="form-text">
+                <label class="form-lable" for="City">City</label>
+                <input type="text" name="City" id="" class="form-text">
+                <button class="center-button form-button" type="submit" onclick="javascrpt:checkUpload()">Submit</button>
             </form>
         </div>
     </div>
