--- a/src/other/signin.html
+++ b/src/other/signin.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container-l0-colflex sign-container">
         <header class="sign-header">Sign in</header>
-        <form class="sign-content form-container" method="POST" action="../public/home.html">
+        <form class="sign-content form-container" method="" action="../public/home.html">
             <label class="form-lable" for="user-name">Username</label>
             <input class="form-text" type="text" name="user-name" required>
             <label class="form-lable" for="user-pwd">Password</label>
@@ -20,6 +20,9 @@
         <footer class="sign-footer">
             New to FDU? <a href="signup.html">Create an account.</a>
             <footer>
+    </div>
+    <div class="footer-container">
+        <footer class="footer-brief"></footer>
     </div>
 </body>
 
