--- a/src/other/signup.html
+++ b/src/other/signup.html
@@ -10,7 +10,7 @@
 <body>
     <div class="sign-container">
         <header class="sign-header">Sigh up</header>
-        <form class="sign-content form-container" method="POST" action="signin.html">
+        <form class="sign-content form-container" method="" action="signin.html">
             <label class="form-lable" for="username">Username</label>
             <input class="form-text" required type="text" name="username">
             <label class="form-lable" for="email">Email address</label>
@@ -21,6 +21,9 @@
             <input class="form-text" required type="password" name="pwd-confirm">
             <button class="button form-button" type="submit">Sign up</button>
         </form>
+        <div class="footer-container">
+            <footer class="footer-brief"></footer>
+        </div>
 </body>
 
 </html>
