--- a/src/private/upload.html
+++ b/src/private/upload.html
@@ -38,7 +38,7 @@
     <div class="container-l0-colflex responsive">
         <div class="upload container-l1">
             <div class="title">Upload</div>
-            <form class="form-container container-l2" action="mypicture.html" method="POST">
+            <form class="form-container container-l2" action="mypicture.html" method="">
                 <div id="photo-container" class="photo-container">
                     <img id="photo-preview" src="../../img/svg/image.svg" alt="">
                 </div>
